--- a/src/app/pages/home/Uploadtrainer.css
+++ b/src/app/pages/home/Uploadtrainer.css
@@ -12,3 +12,45 @@
     color: #ffffff;
 
 }
+.informasimateri{
+    width: 141px;
+  height: 36px;
+  font-family: Muli;
+  font-size: 18px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2;
+  letter-spacing: normal;
+  color: #333333;
+}
+.tabelawal {
+    width: 144px;
+  height: 42px;
+  font-family: Muli;
+  font-size: 14px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #333333;
+}
+.input2 {
+    width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: solid 1px #e0e0e0;
+  background-color: #fbfbfb;
+}
+.input4 {
+    width: 100%;
+    height: 135px;
+  border-radius: 4px;
+  border: solid 1px #e0e0e0;
+  background-color: #fbfbfb;
+}
+
+
+
+
