--- a/src/assets/css/login/main.css
+++ b/src/assets/css/login/main.css
@@ -214,6 +214,7 @@ iframe {
 }
 
 
+
 .wrap-login100 {
   width: 450px;
   min-height: 10vh;
@@ -554,6 +555,15 @@ iframe {
   line-height: 1.2;
   
 }
+.login100-form-btn1.disabled,
+.login100-form-btn1[disabled]{
+  
+  cursor: not-allowed;
+  filter: alpha(opacity=30);
+  opacity: 0.3;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
 
 
 .wrap-login100-form-btn:hover .login100-form-bgbtn {
@@ -663,4 +673,26 @@ iframe {
 .kotakmenu{
   background-image: linear-gradient(to left,#7aa2dc, #3b69ce);
   box-shadow: 0 4px 4px 0 rgba(217, 217, 217, 1);
+}
+
+.style-kotak{
+  background-color: #f5f5f5; 
+  width: 100%;
+  height: 40px;
+  
+  padding-left: 20px;
+  border-radius: 4px ;
+  
+  }
+
+.has-error .style-kotak{
+  border-color: #a94442;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.has-error .style-kotak:focus {
+  border-color: #843534;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #fc0313;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #fc0313;
 }
