--- a/src/app/pages/auth/register/usermontir.css
+++ b/src/app/pages/auth/register/usermontir.css
@@ -1,9 +1,140 @@
-.style-kotak{
+@import url("https://fonts.googleapis.com/css?family=Muli:regular,bold,italic&subset=latin,latin-ext");
+.daftarreader{
 
-    border: '2px solid #dbdbdb' ;
-    padding-left:"20px" ;
-    width :"100%" ;
-    height :"40px" ;
-    background-color:"#f5f5f5" ;
-    border-radius : "4px" ;
+    width: 505px;
+    height: 30px;
+    font-family: 'Muli';
+    font-size: 24px;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.25;
+    letter-spacing: normal;
+    color: #333333;
+}
+.wrapinput {
+    width: 100%;
+  position: relative;
+  margin-top: 15px;
+}
+.textlengkap {
+    width: 101px;
+  height: 18px;
+  font-family: 'Muli';
+  font-size: 13px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #333333;
+}
+.style-kotak {
+    width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: solid 1px #e0e0e0;
+  background-color: #f5f5f5;
+
+  font-family: 'Muli';
+  font-size: 13px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.93;
+  letter-spacing: normal;
+  color: rgba(51, 51, 51, 0.4);
+}
+.has-error .style-kotak{
+    border-color: #a94442;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  }
+  
+  .has-error .style-kotak:focus {
+    border-color: #843534;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #fc0313;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #fc0313;
+  }
+  
+.containerbuttondaftar {
+    width: 100%;
+  height: 90px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.buttondaftar {
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  width: 100%;
+  height: 40px;
+
+  border-radius: 40px;
+  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(to top, #7aa2dc, #3b69ce);
+
+  font-family: 'Muli';
+  font-size: 14px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.57;
+  letter-spacing: normal;
+  color: #ffffff;
+
+}
+
+.buttondaftar.disabled,
+.buttondaftar[disabled]{
+  
+  cursor: not-allowed;
+  filter: alpha(opacity=30);
+  opacity: 0.3;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.ataudaftar{
+    font-family: 'Muli';
+  font-size: 12px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: rgba(51, 51, 51, 0.4);
+  padding-bottom: 16px;
+  padding-top: 16px;
+  text-align: center;
+}
+.containerbuttonmedia{
+    width: 30%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+.buttonmedia{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
+  width: 100%;
+  height: 40px;
+  
+  border-radius: 40px;
+  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.2);
+  background-color: #e84f4a;
+
+  font-family: 'Muli';
+  font-size: 14px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.57;
+  letter-spacing: normal;
+  color: #ffffff;
 }
