--- a/src/assets/css/login/main.css
+++ b/src/assets/css/login/main.css
@@ -85,7 +85,7 @@ h4:before, h4:after {
             font-weight: bold;
             color: #9d9d9d;
             padding-bottom: 25px;
-            font-size: 4px;
+            font-size: 10px;
           }
 
 p {
@@ -203,10 +203,6 @@ iframe {
 
 .container-login100 {
   width: 100%;  
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
   align-items: stretch;
@@ -417,21 +413,16 @@ iframe {
 [ Button ]*/
 .container-login100-form-btn {
   width: 100%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
+  height: 90px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  padding-top: 40px;
+  
 }
 .container-login100-form-btn1 {
   width: 30%;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -454,14 +445,7 @@ iframe {
   overflow: hidden;
 }
 
-.Lupapassword {
-  font-family: 'Muli';
-  text-align: center;
-  font-size: 12px;
-  font-weight: 800;
-  color: #4571d0;
-  padding-top: 18px;
-}
+
 
 
 .login100-form-bgbtn {
@@ -482,77 +466,97 @@ iframe {
   transition: all 0.4s;
 }
 .login100-form-btn {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
+  
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0 20px;
-  width: 350px;
+  width: 100%;
   height: 40px;
+
+  border-radius: 40px;
+  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(to top, #7aa2dc, #3b69ce);
+
   font-family: 'Muli';
-  font-weight: 700;
-  font-size: 13px;
+  font-size: 14px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.57;
+  letter-spacing: normal;
   color: #ffffff;
-  line-height: 1.5;
-  background-image: linear-gradient(to left , #7aa2dc, #3b69ce) ;
   
   
 }
 .login100-form-btn3 {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
+
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0 20px;
-  width: 110px;
+  width: 100%;
   height: 40px;
+
+  border-radius: 40px;
+  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.2);
+  background-color: #e84f4a;
+
   font-family: 'Muli';
-  font-weight: 800;
-  font-size: 12px;
+  font-size: 14px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.57;
+  letter-spacing: normal;
   color: #ffffff;
-  line-height: 1.5;
   
 }
 .login100-form-btn4 {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
+  
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0 20px;
-  width: 90px;
-  height: 30px;
-  font-family: Poppins-Medium;
-  font-size: 12px;
-  color: #ffffff;
-  line-height: 1.5;
+  width: 100%;
+  height: 40px;
   
+  border-radius: 40px;
+  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.2);
+  background-color: #e84f4a;
+
+  font-family: 'Muli';
+  font-size: 14px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.57;
+  letter-spacing: normal;
+  color: #ffffff;
 }
 
 .login100-form-btn1 {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0 20px;
-  width: 300px;
+  width: 100%;
   height: 40px;
 
-  font-family: Poppins-Medium;
-  font-size: 16px;
-  color: #fff;
-  line-height: 1.2;
+  border-radius: 40px;
+  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.2);
+  background-image: linear-gradient(to top, #7aa2dc, #3b69ce);
+
+  font-family: 'Muli';
+  font-size: 14px;
+  font-weight: 600;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.57;
+  letter-spacing: normal;
+  color: #ffffff;
+
+
   
 }
 .login100-form-btn1.disabled,
